--- a/e3-gateway/gateway/package.json
+++ b/e3-gateway/gateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e2-jwt",
+  "name": "e3-gateway",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,14 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "axios": "^0.26.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15",
-    "sequelize": "^6.16.2",
-    "yup": "^0.32.11"
+    "nodemon": "^2.0.15"
   }
 }
